Can view tasks by id. Can view tasks details on tasks page. Can navigate back to main page.

--- a/app/views/tasks/tasks.html.erb
+++ b/app/views/tasks/tasks.html.erb
@@ -6,6 +6,7 @@
   	  <%= check_box_tag "complete", "task", task.completed %>
   	  Task: 
   	  <%= task.title %>
+  	  <%= link_to "View", show_path(task) %>
   	</li>
   <% end %>
 </ul>
